Refactor and fix FTP client test suite
Major improvements:
- Fixed 'pytest: reading from stdin while output is captured!' error
- Fixed Windows PermissionError in temp file cleanup
- Removed duplicate and unused test files
- Added comprehensive test coverage for all FTP operations
- Implemented automatic cleanup system
- Created interactive test runner with menu interface

Test Suite Changes:
- Added test_real_server.py (core FTP functionality)
- Added test_ftp_navigation.py (directory operations)
- Added test_ftp_multiple_operations.py (mput/mget with mock virus scanner)
- Added test_ftp_local_operations.py (local commands)
- Added test_ftp_transfer_mode.py (active/passive modes)
- Added cleanup.py (workspace maintenance utility)
- Updated test_runner.py (English output, Vietnamese comments)
- Updated conftest.py (improved fixtures and cleanup)
- Updated README.md (comprehensive documentation)

Bug Fixes:
- Disabled prompts in test environment to prevent stdin issues
- Improved temp directory cleanup on Windows
- Removed redundant imports and optimized code
- Added mock virus scanner for faster tests

Features:
- Real server integration tests only
- Automatic file/directory cleanup after tests
- Comprehensive test reporting
- Server availability checking
- Interactive menu-driven test execution

All tests now pass without errors and provide complete FTP functionality coverage.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,19 @@ venv.bak/
 *.swo
 *~
 
+# Backup và temporary files
+*.bak
+*.tmp
+*.temp
+*_backup
+*_backup.*
+fixed_*
+temp_*
+
+# OneDrive temporary files
+*.onedrive
+*-OneDrive
+
 # OS generated files
 .DS_Store
 .DS_Store?
