--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -11,7 +11,9 @@ markers =
     file_ops: File operation tests
     directory_ops: Directory operation tests
     local_ops: Local operation tests
+    virus_scan: Virus scanning tests
     integration: Integration tests (require servers)
+    real_server: Real server integration tests (require actual FTP server and credentials)
 
 # Output options
 addopts = 
