--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -12,8 +12,9 @@ markers =
     directory_ops: Directory operation tests
     local_ops: Local operation tests
     virus_scan: Virus scanning tests
-    integration: Integration tests (require servers)
-    real_server: Real server integration tests (require actual FTP server and credentials)
+    timeout: mark test to run with a timeout
+    integration: integration test
+    real_server: real server test
 
 # Output options
 addopts = 
